--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   step_progress_indicator: ^1.0.2
   carousel_slider: ^4.2.1
   percent_indicator: ^4.0.1
+  firebase_core: ^2.24.2
+  firebase_database: ^10.3.8
 
 dev_dependencies:
   flutter_test:
